# CodeReviewer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  broken_syntax.py  docker-compose.yml  entrypoint.sh  helper_source.py  ollama-entrypoint.sh  requirements.txt
app/: embeddings.py  main.py  memory.py  model_factory.py  routers.py  schemas.py
app/graph/: aggregator.py  graph_builder.py  judge.py  output.py  parsers.py  start_node.py  state.py  task_classifier.py  trivial_output.py
app/graph/agents/: bug_agent.py  performance_agent.py  quality_agent.py  security_agent.py
app/mcp_server/: DockerFile  main.py  pyproject.toml
app/taint/: taint_patterns.py  taint_tracker.py
handlers/: handler_sink.py
