[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==1.5.9",
    "fastmcp>=3.4.4",
    "langchain-core==1.4.7",
    "langchain-groq==1.1.3",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.11",
    "langgraph==1.1.10",
    "ollama==0.6.1",
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
]
